# metadados-playstation

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
app/: app.py
app/pages/: overview.py
app/views/: home.py  market_trends.py  overviews.py  publishers.py
data/cleaned/: PlayStation_Metadata_treated.csv
data/raw/: PlayStation_Metadata.csv
notebooks/: analysis.ipynb
src/: data_utils.py  plotly_utils.py  utils.py
utils/: data_utils.py  plotly_utils.py
